--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/about.html">About Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/login.html">Login</a>
